# nero_ai

./: .gitignore  package.xml  setup.cfg  setup.py
launch/: nero_ai.launch.py
nero_ai/: camera_calibration.py  command_parser.py  mcp_robot_server.py  moondream_server.py  perception_node.py  planning_node.py
scripts/: calibrate_homography.py  run_cluster.sh
