<?xml version="1.0"?>
<package format="3">
  <name>nero_ai</name>
  <version>0.0.1</version>
  <description>NERO AI pipeline</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
